<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.morgan.sunrisealarm.MainActivity"
    android:background="?attr/colorControlHighlight">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day1"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day1"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day1"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day1"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day2"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day2"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day2"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day2"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day3"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day3"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day3"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day3"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day4"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day4"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day4"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day4"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day5"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day5"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day5"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day5"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day6"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day6"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day6"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day6"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="261dp"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_day7"
                    android:onClick="layoutClicked">

                    <TextView
                        android:text="@string/day7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_day7"
                        android:enabled="false" />

                    <TextView
                        android:text="@string/zero_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_day7"
                        android:textSize="30sp"
                        android:textStyle="normal|bold"
                        android:enabled="false" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/switch_day7"
                    android:checked="false"
                    android:enabled="false" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
